EM Monitor template updated

--- a/src/modules/four-column-contents/templates/template.html
+++ b/src/modules/four-column-contents/templates/template.html
@@ -8,7 +8,7 @@
 		<td class="content h-flush">
 			<h4 class="center">Subscribe to Our Flagship Insights</h4>
 			<br>
-			<table style="width: 100%;" cellpadding="8px">
+			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_four-column">
 					<td style="" class="column">
 						<img src="@@imgBase/@@imgSrc" width="124" alt="First Column Image">
