--- a/src/modules/one-column-contents/shift-right/templates/template.html
+++ b/src/modules/one-column-contents/shift-right/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px">
+			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_mobile-one-column">
 					<td width="124" style="font-size:1px; line-height:21px;" class="column">&nbsp;</td>
 					<td class="column">
