--- a/src/modules/two-column-contents/image-left/templates/template.dark.html
+++ b/src/modules/two-column-contents/image-left/templates/template.dark.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px">
+			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_two-column">
 					<td style class="column">
 						<h3 class="subheadline">Emerging Markets Investment Grade Yields</h3>
