--- a/src/modules/two-column-contents/strategy-card/templates/template.html
+++ b/src/modules/two-column-contents/strategy-card/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<table style="" cellpadding="8px" class="w-100" align="">
+			<table style="" cellpadding="8px" class="w-100" align="" role="presentation">
 				<tr class="layout_two-column layout_mobile-one-column" align="center">
 					<!--[if mso]>
 					<td style="width: 194px; margin-right:16px;" align="right" class="column">
