--- a/src/modules/email-banner/two-column/templates/template.dark.onyx.html
+++ b/src/modules/email-banner/two-column/templates/template.dark.onyx.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px">
+			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_two-column">
 					<td style="margin-bottom: 16px;" class="column">
 						<h1>Factor Report</h1>
