--- a/src/modules/three-column-contents/large-thumbnail/templates/template.html
+++ b/src/modules/three-column-contents/large-thumbnail/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px">
+			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_four-column">
 					<td colspan="2">
 						<img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="100%">
