--- a/src/modules/three-column-contents/speaker/templates/template.html
+++ b/src/modules/three-column-contents/speaker/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px">
+			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_four-column">
 					<td style="font-size:1px; line-height:21px; width:124px;" class="column d-none-sm">&nbsp;</td>
 					<!--[if mso]>
