--- a/src/modules/two-column-contents/full-content/templates/template.html
+++ b/src/modules/two-column-contents/full-content/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="" cellpadding="8px" class="w-100">
+			<table style="" cellpadding="8px" class="w-100" role="presentation">
 				<tr class="layout_two-column">
 					<td class="column">
 						<img style="" src="@@imgBase/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block">
