--- a/src/modules/two-column-contents/image-right/templates/template.dark.onyx.html
+++ b/src/modules/two-column-contents/image-right/templates/template.dark.onyx.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px">
+			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_two-column">
 					<td style class="column">
 						<h4>Do Rising US Interest Rates Offer Opportunities in EM?</h4>
