--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -7,52 +7,31 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../index.css">
 	</head>
-<!--[if mso]>
-	<body align="center" class="mso">
-<![endif]-->
-<!--[if !mso]><!-->
 	<body align="center">
-<!--<![endif]-->
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
 			<!-- Logo Banner -->
 			<tr>
 				<td align="center">			
-					<!--
-						Module: logo-banner
-						Variant: parchment
-					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
-						<tr>
-							<td class="frame"></td>
-							<td class="content">
-								<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Logo_Transparent.png" alt="LAM Logo" height="36">
-							</td>
-							<td class="frame"></td>
-						</tr>
-					</table>
+					@@include( "modules/logo-banners/templates/template.html", {
+						variant: "parchment",
+						imgSrc: "LAM_Logo_Transparent.png"
+					} )
 				</td>
 			</tr>
+			<!-- END Logo Banner -->
 
-			<!-- Email Banner -->
+			<!-- Email Banner, One Column -->
 			<tr>
 				<td align="center">
-					<!--
-						Module: Email Banner, One Column
-						Variant: parchment
-					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
-						<tr>
-							<td class="frame"></td>
-							<td class="content v-flush">
-								<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Banner_Industrial.png" alt="Banner Image" width="100%" height="auto">
-							</td>
-							<td class="frame"></td>
-						</tr>
-					</table>
+					@@include( "modules/email-banner/one-column/templates/template.html", {
+						variant: "parchment",
+						imgSrc: "LAM_Banner_Industrial.png"
+					} )
 				</td>
 			</tr>
+			<!-- END Email Banner, One Column -->
 
-			<!-- One Column Contents -->
+			<!-- One Column Content -->
 			<tr>
 				<td align="center">
 					<!--
@@ -69,7 +48,7 @@
 								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">Emerging Market Monitor</span></p>
 								<br>
 								<h2>Is manufacturing shifting from China to India?</h2>
-								<br>
+								<br>								
 								<p class="disclaimer">
 									As of 26 October 2023<br>
 									Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br>
@@ -79,6 +58,10 @@
 								<p class="paragraph-2">As the United States and European Union increase tariffs on Chinese exports and China becomes more difficult for investors to navigate, companies may be looking to move production away from China to more attractive alternatives. While countries like Mexico, Poland, Vietnam, and Thailand vie for the top spot, India, with its young population and growing economy, might be leading the pack.</p>
 								<br>
 								
+								<!--
+									Component: Button
+									Variant: Pill, Primary, Large
+								-->
 								<!--
 									Component: Pill Button
 									Variant: Primary, Sapphire
@@ -97,14 +80,16 @@
 										</center>
 									</v:roundrect>
 								<![endif]-->
+								&nbsp;&nbsp;								
 							</td>
 							<td class="frame"></td>
 						</tr>
 					</table>
 				</td>
 			</tr>
+			<!-- END One Column Content -->
 
-			<!-- CTA Banner -->
+			<!-- CTA Banner, One Column -->
 			<tr>
 				<td align="center">
 					<!--
@@ -117,7 +102,7 @@
 							<td class="content">
 								<h2>Explore a New Perspective on AI from Our Team</h2>
 								<br>
-								<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+								<p class="paragraph-2">This paper explores the investment applications of small language models and their advantages over large language models.</p>
 								<br>
 								<!--
 									Component: Pill Button
@@ -125,81 +110,28 @@
 								-->
 								<!--[if mso]>
 									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-										style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
+										style="height:32px;v-text-anchor:middle;color:#ffffff;width:106px;" 
 										fillcolor="#00539A">
 										<w:anchorlock/>
 										<center class="mso">
 								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill @@variant">
-									<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
+								<a target="_blank" href="https://lazard.com/" style="width: 106px" class="btn pill">
+									<!--[if !mso]><!--><span><!--<![endif]-->Learn More<!--[if !mso]><!--></span><!--<![endif]-->
 								</a>
 								<!--[if mso]>
 										</center>
 									</v:roundrect>
-								<![endif]-->	
+								<![endif]-->		
 							</td>
 							<td class="frame"></td>
 						</tr>
 					</table>
 				</td>
 			</tr>
+			<!-- END CTA Banner, One Column -->
 
 			<!-- Footer + Disclaimer -->
-			<tr>
-				<td align="center">
-					<!--
-						Module: Two Column Footer Disclaimer
-						Variant: Onyx
-					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark onyx">
-						<tr>
-							<td class="frame"></td>
-							<td class="content h-flush">
-								<table style="width: 100%;" cellpadding="8px">
-									<tr class="layout_mobile-one-column">
-										<td style="width: 65px;" class="column nowrap">
-											<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
-												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
-											</a>
-											&nbsp;&nbsp;
-											<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
-												<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
-											</a>
-										</td>
-										<td class="column">
-											<p class="paragraph-2">Lazard Asset Management, 30 Rockefeller Plaza, New York, NY 10112-6300</p>
-											<br>
-											<p class="paragraph-2">For more information on Lazard Asset Management's capabilities,</p>
-											<p class="paragraph-2 margin-b-48">visit <a href="lazardassetmanagement.com" class="paragraph-2">lazardassetmanagement.com</a>.</p>
-			
-											<p class="paragraph-3">1 The investment team's research covers the time period from January 1,1998 to December 31, 2022.</p>
-											<p class="paragraph-3">2 As measured by cash flow return on investment or return on equity.</p>
-											<br>
-											<p class="paragraph-2">FOR FINANCIAL PROFESSIONAL USE ONLY. NOT FOR PUBLIC DISTRIBUTION.</p>
-											<br>
-											<table style="width: 100%;">
-												<tr class="layout_two-column">
-													<td style class="column padding-r-16">
-														<p class="paragraph-3">Information and opinions presented have been obtained or derived from sources believed by Lazard to be reliable. Lazard makes no representation as to their accuracy or completeness. All opinions expressed herein are subject to change. The S&P 500 Index is a market capitalization-weighted index of 500 companies in leading industries of the US economy. The MSCI Emerging Markets Index is a free-float-adjusted market capitalization index that is designed to measure equity market performance in the global emerging markets. The MSCI Emerging Markets Index consists of emerging markets country indices including: Brazil, Chile, China, Colombia, Czech Republic, Egypt, Greece, Hungary, India, Indonesia, Korea, Malaysia, Mexico, Peru, Philippines, Poland, Qatar, Saudi Arabia, South Africa, Taiwan, Thailand, Turkey, and United Arab Emirates. The index is unmanaged and has no fees. One cannot invest directly in an index. The MSCI World Index is a free-float-adjusted market capitalization index that is designed to measure global developed market equity performance comprised of developed market country indices. </p>
-													</td>
-													<td class="column">
-														<p class="paragraph-3">The index is unmanaged and has no fees. One cannot invest directly in an index.Certain information included herein is derived by Lazard in part from an MSCI index or indices (the “Index Data”). However, MSCI has not reviewed this product or report, and does not endorse or express any opinion regarding this product or report or any analysis or other information contained herein or the author or source of any such information or analysis. MSCI makes no express or implied warranties or representations and shall have no liability whatsoever with respect to any Index Data or data derived therefrom.</p>
-														<br>
-														<p class="paragraph-3">Read our Privacy Notice for information about how we use personal data that we hold on you</p>
-														<br>
-														<p class="paragraph-3">To unsubscribe from future emails or customize our communications with you, manage your email preferences.</p>
-													</td>
-												</tr>
-											</table>
-										</td>
-									</tr>
-								</table>
-							</td>
-							<td class="frame"></td>
-						</tr>
-					</table>
-				</td>
-			</tr>
+			@@include( "modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html" )
 		</table>
 	</body>
 </html>
