--- a/src/modules/cta-banner/two-column/templates/template.onyx.html
+++ b/src/modules/cta-banner/two-column/templates/template.onyx.html
@@ -8,7 +8,7 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" border="0" cellpadding="8px" cellspacing="0" role="presentation"class="layout_two-column_fluid">
 				<tr>
-					<td class="column">
+					<td class="column" width="100%">
 						@@heading
 						<br>
 						@@paragraph
