--- a/src/modules/email-headings/templates/template.dark.html
+++ b/src/modules/email-headings/templates/template.dark.html
@@ -8,7 +8,7 @@
 		<td class="content h-flush">
 			<table style="" border="0" cellpadding="8px" cellspacing="0" role="presentation" class="layout_two-column_fluid w-100">
 				<tr>
-					<td class="column">
+					<td class="column" width="100%">
 						@@heading
 						<br>
 						@@paragraph
