Some feedback changes

--- a/src/components/components.html
+++ b/src/components/components.html
@@ -7,6 +7,82 @@
 					<table cellpadding="8px" width="100%" role="presentation">
 
 						<tr>
+							<td align="center" id="Headlines">
+								<h4 style="margin: 16px;">Headlines</h4>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								<h1>Headline 1</h1>
+								<br>
+								<h2>Headline 2</h2>
+								<br>
+								<h3>Headline 3</h3>
+								<br>
+								<h4>Headline 4</h4>
+							</td>
+						</tr>
+
+						<tr>
+							<td align="center">
+								<h4 style="margin: 16px;">Subheadlines</h4>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								<h1 class="subheadline">Headline 1</h1>
+								<br>
+								<h2 class="subheadline">Headline 2</h2>
+								<br>
+								<h3 class="subheadline">Headline 3</h3>
+							</td>
+						</tr>
+
+						<tr>
+							<td align="center">
+								<h4 style="margin: 16px;">Paragraphs</h4>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								<p>Paragraph 1</p>
+								<br>
+								<p class="paragraph-2">Paragraph 2</p>
+								<br>
+								<p class="paragraph-3">Paragraph 3</p>
+							</td>
+						</tr>
+
+						<tr>
+							<td align="center">
+								<h4 style="margin: 16px;">Disclaimer/Caption</h4>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								<p class="caption">Disclaimer + Caption</p>
+							</td>
+						</tr>
+
+						<tr>
+							<td align="center">
+								<h4 style="margin: 16px;">Links</h4>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								<a href="http://www.lazard.com">Link 1</a>
+								<br>
+								<a href="http://www.lazard.com" class="link-2">Link 2</a>
+							</td>
+						</tr>
+
+						<tr>
 							<td align="center" id="eyebrows">
 								<h4 style="margin: 16px;">Eyebrows</h4>
 							</td>
