--- a/src/modules/footer-disclaimer/two-column/templates/template.html
+++ b/src/modules/footer-disclaimer/two-column/templates/template.html
@@ -12,10 +12,10 @@
 						<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
 							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
 						</a>
-						&nbsp;&nbsp;
+						<!-- &nbsp;&nbsp;
 						<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
 							<img src="@@imgBase/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
-						</a>
+						</a> -->
 					</td>
 					<td class="column">
 						<p class="paragraph-2">Lazard Asset Management, 30 Rockefeller Plaza, New York, NY 10112-6300</p>
