--- a/src/templates/fixed-income-viewpoint.html
+++ b/src/templates/fixed-income-viewpoint.html
@@ -20,7 +20,7 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
-								<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Logo_Transparent.png" alt="LAM Logo" height="36">
+								<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Logo_Transparent.png" alt="Lazard Asset Management Logo" height="36">
 							</td>
 							<td class="frame"></td>
 						</tr>
