Minor fixes, also replaced images with placeholders

--- a/src/modules/email-banner/one-column/templates/template.html
+++ b/src/modules/email-banner/one-column/templates/template.html
@@ -6,7 +6,8 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content v-flush">
-			<img style="width: 100%; height: auto;" src="@@imgBase/@@imgSrc" alt="Banner Image" />
+			<!-- <img style="width: 100%; height: auto;" src="@@imgBase/@@imgSrc" alt="Banner Image" /> -->
+			<img src="https://placehold.co/576x140" alt="Banner Image" width="100%" height="auto" />
 		</td>
 		<td class="frame"></td>
 	</tr>
