--- a/src/modules/one-column-contents/basic/templates/template.dark.html
+++ b/src/modules/one-column-contents/basic/templates/template.dark.html
@@ -15,7 +15,8 @@
 			<br>
 			<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 			<br>
-			<img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="mw-100" />
+			<!-- <img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="mw-100" /> -->
+			<img src="https://placehold.co/543x304" alt="Feature Image" width="100%" height="auto"  />
 			<p></p> <!-- Spacer <p> for MSO image margin -->
 			<br>
 			<p class="disclaimer">
