--- a/src/modules/tables/thumbnail/templates/template.html
+++ b/src/modules/tables/thumbnail/templates/template.html
@@ -15,7 +15,8 @@
 			<table style="" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<!-- <img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail"> -->
+						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -31,7 +32,8 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<!-- <img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail"> -->
+						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -47,7 +49,8 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<!-- <img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail"> -->
+						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -63,7 +66,8 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<!-- <img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail"> -->
+						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -79,7 +83,8 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<!-- <img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail"> -->
+						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -95,7 +100,8 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
+						<!-- <img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail"> -->
+						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
