--- a/src/components/team-bios/template.html
+++ b/src/components/team-bios/template.html
@@ -1,7 +1,7 @@
 <table cellspacing="16px" role="presentation" class="">
 	<tr  cellspacing="16px">
 		<td rowspan="2" style="vertical-align: middle;" class="padding-r-16">
-			<img src="@@imgBase/@@imgSrc" alt="Team member bio thumbnail" class="">
+			<img src="https://placehold.co/54x54" alt="Team member bio thumbnail" width="54px" height="54px">
 		</td>
 		<td style="vertical-align: bottom;">
 			<h3 class="subheadline">@@name</h3>
