--- a/src/modules/email-banner/two-column/templates/template.dark.onyx.html
+++ b/src/modules/email-banner/two-column/templates/template.dark.onyx.html
@@ -20,7 +20,8 @@
 						})
 					</td>
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="Feature image">
+						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
+						<img src="https://placehold.co/264x148" alt="Feature image" width="264px" height="148px">
 					</td>
 				</tr>
 			</table>
