--- a/src/modules/three-column-contents/large-thumbnail/templates/template.html
+++ b/src/modules/three-column-contents/large-thumbnail/templates/template.html
@@ -9,7 +9,8 @@
 			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_four-column">
 					<td colspan="2">
-						<img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="100%">
+						<!-- <img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="100%"> -->
+						<img src="https://placehold.co/263x263" alt="GIFL Image" width="263px" height="auto">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
@@ -22,7 +23,8 @@
 					</td>
 					<!-- <td></td> -->
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="124">
+						<!-- <img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="124"> -->
+						 <img src="https://placehold.co/124x124" alt="GIFL Image" width="124px">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
@@ -34,7 +36,8 @@
 						})
 					</td>
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="124">
+						<!-- <img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="124"> -->
+						 <img src="https://placehold.co/124x124" alt="GIFL Image" width="124px">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
