--- a/src/modules/three-column-contents/speaker/templates/template.html
+++ b/src/modules/three-column-contents/speaker/templates/template.html
@@ -14,7 +14,8 @@
 					<![endif]-->
 					<!--[if !mso]><!-->
 					<td class="column align-right-md">
-						<img style="width:124px;" src="@@imgBase/@@imgSrc"  alt="Bio Image">
+						<!-- <img style="width:124px;" src="@@imgBase/@@imgSrc"  alt="Bio Image"> -->
+						<img src="https://placehold.co/124x124" alt="Bio Image" width="124px">
 					</td>
 					<td style="width: 248px;" colspan="2">
 						<h3>@@name</h3>
