--- a/src/modules/three-column-contents/three-thumbnail/templates/template.html
+++ b/src/modules/three-column-contents/three-thumbnail/templates/template.html
@@ -10,7 +10,8 @@
 				<tr class="layout_four-column layout_mobile-one-column">
 					<td width="124" style="font-size:1px; line-height:21px;" class="column">&nbsp;</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class="">
+						<!-- <img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class=""> -->
+						<img style src="https://placehold.co/124x124" width="124px" alt="Column Image">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
@@ -21,7 +22,8 @@
 						})
 					</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class="">
+						<!-- <img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class=""> -->
+						<img style src="https://placehold.co/124x124" width="124px" alt="Column Image">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
@@ -32,7 +34,8 @@
 						})
 					</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class="">
+						<!-- <img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class=""> -->
+						<img style src="https://placehold.co/124x124" width="124px" alt="Column Image">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
