--- a/src/modules/thumbnail-grid/templates/template.dark.html
+++ b/src/modules/thumbnail-grid/templates/template.dark.html
@@ -11,7 +11,8 @@
 			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_two-column">
 					<td style="" class="column">
-						<img src="@@imgBase/@@imgSrc" alt="Feature image">
+						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
+						 <img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<h3>Emerging Markets</h3>
@@ -28,7 +29,8 @@
 						<br>
 					</td>
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="Feature image">
+						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
+						 <img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<h3>Emerging Markets</h3>
@@ -45,7 +47,8 @@
 				</tr>
 				<tr class="layout_two-column">
 					<td style="" class="column">
-						<img src="@@imgBase/@@imgSrc" alt="Feature image">
+						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
+						 <img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<h3>Emerging Markets</h3>
@@ -60,7 +63,8 @@
 						})
 					</td>
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="Feature image">
+						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
+						 <img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<h3>Emerging Markets</h3>
