--- a/src/modules/two-column-contents/full-content/templates/template.html
+++ b/src/modules/two-column-contents/full-content/templates/template.html
@@ -9,7 +9,8 @@
 			<table style="" cellpadding="8px" class="w-100" role="presentation">
 				<tr class="layout_two-column">
 					<td class="column">
-						<img style="" src="@@imgBase/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block">
+						<!-- <img style="" src="@@imgBase/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block"> -->
+						<img style="" src="https://placehold.co/264x148" alt="First Column Feature image" width="263" border="0" class="d-block">
 						<p></p>
 						<br>
 						<!--
@@ -72,7 +73,8 @@
 						})
 					</td>
 					<td class="column">
-						<img style="" src="@@imgBase/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="263" border="0" class="d-block">
+						<!-- <img style="" src="@@imgBase/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="263" border="0" class="d-block"> -->
+						<img style="" src="https://placehold.co/264x148" alt="Second Column Feature image" width="263" border="0" class="d-block">
 						<p></p>
 						<br>
 						<!--
