--- a/src/modules/two-column-contents/image-right/templates/template.dark.onyx.html
+++ b/src/modules/two-column-contents/image-right/templates/template.dark.onyx.html
@@ -27,7 +27,8 @@
 					<td style class="column">
 						<h3 class="subheadline">Emerging Markets Investment Grade Yields</h3>
 						<br>
-						<img style src="@@imgBase/@@imgSrc" alt="Second Column Image" class="">
+						<!-- <img style src="@@imgBase/@@imgSrc" alt="Second Column Image" class=""> -->
+						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="caption">
