--- a/src/modules/two-column-contents/speaker/templates/template.html
+++ b/src/modules/two-column-contents/speaker/templates/template.html
@@ -5,7 +5,8 @@
 			<table style="width: 100%;" role="presentation">
 				<tr class="layout_mobile-one-column">
 					<td style="" class="column margin-b-16 padding-r-16">
-						<img style src="@@imgBase/@@imgSrc" alt="Speaker thumbnail">
+						<!-- <img style src="@@imgBase/@@imgSrc" alt="Speaker thumbnail"> -->
+						<img style src="https://placehold.co/124x124" alt="Speaker thumbnail" width="124px" height="124px">
 					</td>
 					<td class="column">
 						<h3>@@name</h3>
