--- a/src/modules/two-column-contents/strategy-card/templates/template.html
+++ b/src/modules/two-column-contents/strategy-card/templates/template.html
@@ -14,7 +14,8 @@
 					<!--[if !mso]><!-->
 					<td style="width: 194px;" class="column align-right-md">
 					<!--<![endif]-->
-						<img src="@@imgBase/@@imgSrc" alt="Strategy thumbnail" width="194" class="d-block">
+						<!-- <img src="@@imgBase/@@imgSrc" alt="Strategy thumbnail" width="194" class="d-block"> -->
+						<img src="https://placehold.co/194x194" alt="Strategy thumbnail" width="194px" height="194px" class="d-block">
 					</td>
 					<td style="vertical-align: middle; width: 194px;" class="column" align="left">
 						<p class="paragraph-3">
