--- a/src/modules/two-column-contents/title-left/templates/template.html
+++ b/src/modules/two-column-contents/title-left/templates/template.html
@@ -14,7 +14,8 @@
 					<td class="column">
 						<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 						<br>
-						<img style src="@@imgBase/@@imgSrc" alt="Feature Image" width="100%">
+						<!-- <img style src="@@imgBase/@@imgSrc" alt="Feature Image" width="100%"> -->
+						<img style src="https://placehold.co/404x272" alt="Feature Image" width="404px" height="272">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="disclaimer">
