Fixed cellspacing for MSO

--- a/src/modules/three-column-contents/content/templates/template.html
+++ b/src/modules/three-column-contents/content/templates/template.html
@@ -6,9 +6,9 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px" role="presentation">
+			<table style="width: 100%;" role="presentation">
 				<tr class="layout_three-column">
-					<td style="width: 123px;" class="column">
+					<td style="width: 107px;" class="column">
 						<h3>What's trending</h3>
 						<br>
 						<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
