--- a/src/modules/three-column-contents/speaker/templates/template.html
+++ b/src/modules/three-column-contents/speaker/templates/template.html
@@ -6,18 +6,13 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px" role="presentation">
-				<tr class="layout_four-column">
-					<td style="font-size:1px; line-height:21px; width:124px;" class="column d-none-sm">&nbsp;</td>
-					<!--[if mso]>
-					<td style="width:124px; margin-right:16px;" align="right" class="column">
-					<![endif]-->
-					<!--[if !mso]><!-->
+			<table style="width: 100%;" cellpadding="0px" role="presentation">
+				<tr class="layout_two-column">
 					<td class="column align-right-md">
 						<!-- <img style="width:124px;" src="@@imgBase/@@imgSrc"  alt="Bio Image"> -->
 						<img src="https://placehold.co/124x124" alt="Bio Image" width="124px">
 					</td>
-					<td style="width: 248px;" colspan="2">
+					<td class="column">
 						<h3>@@name</h3>
 						<br>
 						<h3 class="subheadline">Director, Head of US Offshore and Latin America Distribution</h3>
