--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -90,9 +90,9 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
-								<table style="width: 100%;" cellpadding="8px" role="presentation">
+								<table style="width: 100%;" role="presentation">
 									<tr class="layout_three-column">
-										<td style="width: 123px;" class="column">
+										<td style="width: 107px;" class="column">
 											<h3>What's trending</h3>
 											<br>
 											<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
@@ -100,10 +100,10 @@
 										<td class="column">
 											<h4>In praise of small language models</h4>
 											<br>
-											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>
+											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
 											<br>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -132,8 +132,8 @@
 												</tr>
 											</table>
 											<br>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -162,8 +162,8 @@
 												</tr>
 											</table>
 											<br>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -191,6 +191,7 @@
 													</td>
 												</tr>
 											</table>
+											<br>										
 										</td>
 										<td class="column">
 											<h4>In praise of small language models</h4>
@@ -212,15 +213,15 @@
 				<td align="center">
 					<!--
 						Module: Three Column Content, Contents
-						Variant: sage, sapphire buttons
+						Variant: parchment, sapphire buttons
 					-->
 					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module sage">
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
-								<table style="width: 100%;" cellpadding="8px" role="presentation">
+								<table style="width: 100%;" role="presentation">
 									<tr class="layout_three-column">
-										<td style="width: 123px;" class="column">
+										<td style="width: 107px;" class="column">
 											<h3>What's trending</h3>
 											<br>
 											<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
@@ -228,10 +229,10 @@
 										<td class="column">
 											<h4>In praise of small language models</h4>
 											<br>
-											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>
+											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
 											<br>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -260,8 +261,8 @@
 												</tr>
 											</table>
 											<br>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -290,8 +291,8 @@
 												</tr>
 											</table>
 											<br>
-											<table cellspacing="16px" role="presentation" class="btn open-in-new">
-												<tr cellspacing="16px">
+											<table role="presentation" class="btn open-in-new">
+												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
 														<v:oval xmlns:v="urn:schemas-microsoft-com:vml" fillcolor="#00539A" strokecolor="#00539A" strokeweight="1px" style="width:30px;height:30px;margin-top:8px;">
@@ -319,6 +320,7 @@
 													</td>
 												</tr>
 											</table>
+											<br>										
 										</td>
 										<td class="column">
 											<h4>In praise of small language models</h4>
@@ -359,13 +361,14 @@
 								<!--
 									Component: Eyebrow
 								-->
-								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
+								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">Your Team</span></p>
 								<br>
 								<h4>Investment Grade Corporate and Sovereign Yields Are Eye-Catching</h4>
 								<br>
 								<p class="paragraph-2">Emerging Markets Investment Grade Yields</p>
 								<br>
-								<img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100">
+								<!-- <img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100" /> -->
+								<img src="https://placehold.co/543x304" alt="Feature Image" width="543px" height="auto">
 								<p></p> <!-- Spacer <p> for MSO image margin -->
 								<br>
 								<p class="disclaimer">
